style.css
body {
  margin: 0 auto;
  object-fit: contain;
  font-family: Georgia, "Times New Roman", Times, serif;
  /* content fit the container */
}
header {
  text-align: center;
}
header img {
  width: 240px;
  margin: 10px 0;
}
header div {
  background-color: rgba(235, 214, 29, 0.1);
  padding: 8px;
  border-top: 1.5px solid rgb(228, 199, 7);
  /* color to the topborder */
}
header p {
  word-spacing: 1.5px;
}
header span {
  font-weight: 600;
  /* font blod */
}
main {
  width: 50%;
  margin: 0 auto;
  /* main become the 50% of the body and the content stay in the center */
}
#intro {
  text-align: center;
}
#intro h1 {
  font-size: 1.8em;
}
/* #intro img {
  width: 100%;
  border-radius: 1em;
  box-shadow: 2px 2px 10px gray;
} */
/* #intro figcaption {
  margin: 10px 0;
  color: rgb(152, 146, 146);
} */
/* immagine sostituita dal video*/
#intro video {
  width: 100%;
  box-shadow: 2px 2px 10px gray;
  border-radius: 1em;
}
#intro #featuring {
  border-left: 1.5px solid rgb(228, 199, 7);
  /* color to the left border */
  margin-top: 24px;
  text-align: left;
  /* aligned text on the left */
  padding: 0 16px;
}
#intro #featuring p {
  color: rgb(206, 112, 18);
}
#intro #featuring a {
  color: rgb(22, 122, 145);
}
#recipe h2 {
  border-bottom: 0.5px solid rgb(54, 203, 181);
  padding: 16px 0;
  margin-top: 48px;
  font-weight: normal;
}
#recipe h3 {
  margin-top: 32px;
  font-size: 1.1em;
}
.ingredients li {
  line-height: 2em;
  /* to have more space between the text lines */
}
.method a {
  color: rgb(22, 122, 145);
}

